<resources>
    <string name="app_name">FMC</string>
    <string name="EventActivityHelloWorld">This is the event activity!</string>
    <string name="FilterActivityHelloWorld">This is the filter activity</string>
    <string name="PersonActivityHelloWorld">This is the person activity</string>
    <string name="SearchActivityHelloWorld">This is the search activity</string>
    <string name="SettingsActivityHelloWorld">This is the settings activity</string>
    <string name="MainActivityHelloWorld">Hello World this is the right activity!</string>
    <string name="LoginFragmentHelloWorld">Login Fragment</string>
    <string name="MapFragmentHelloWorld">Map Fragment</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="server_host">Server Host</string>
    <string name="server_port">Server Port</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="filters">Filters</string>
    <string name="settings">Settings</string>
    <string name="person">Person</string>
    <string name="previous_activity">Previous Activity</string>
    <string name="filters_activity">Filters Activity</string>
    <string name="back">Back</string>
    <string name="settings_activity">Settings Activity</string>
    <string name="settingsBack">Back</string>
    <string name="person_activity">Person Activity</string>
    <string name="event_activity">Event Activity</string>
    <string name="event">Event</string>
    <string name="register400">Register unsuccessful</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="life_story_lines">Life Story Lines \nSHOW LIFE STORY LINES</string>
    <string name="family_tree_lines_color">Family Tree Lines \nSHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines \nSHOW SPOUSE LINES</string>
    <string name="map_type">Map Type\nBACKGROUND DISPLAY ON MAP</string>
    <string name="resync_data_from_familymap_server">Resync Data\nFROM FAMILYMAP SERVICE</string>
    <string name="resync">RESYNC</string>
    <string name="logout_and_return_to_the_login_screen">Logout\nRETURNS TO LOGIN SCREEN</string>
    <string name="logout">LOGOUT</string>
    <string name="first_name_person">FIRST NAME</string>
    <string name="last_name_person">LAST NAME</string>
    <string name="gender_person">GENDER</string>
    <string name="male_events">Male Events</string>
    <string name="show_female_events">Female Events</string>
    <string name="father_s_side">Father\'s Side</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="female_events_nfilter_events_based_on_gender">Female Events \nFILTER EVENTS BASED ON GENDER</string>
    <string name="male_events_nfilter_events_based_on_gender">Male Events \nFILTER EVENTS BASED ON GENDER</string>
    <string name="mother_s_side_nfilter_by_mother_s_side_of_family">Mother\'s Side \nFILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="father_s_side_nfilter_by_father_s_side_of_family">Father\'s Side \nFILTER BY FATHER\'S SIDE OF FAMILY</string>
</resources>
