<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="7dp">

        <!-- this contains a row for each setting -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/settings_background"
            android:orientation="horizontal"
            android:paddingTop="7dp"
            android:paddingBottom="7dp">
            <!--this is a setting row, it contains a text, expanding list of colors, and a radio button -->

            <Spinner
                android:id="@+id/life_story_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toStartOf="@+id/life_story_button"
                android:layout_toLeftOf="@+id/life_story_button"
                android:paddingTop="7dp"
                android:prompt="@string/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/life_story_lines" />

            <ToggleButton
                android:id="@+id/life_story_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/settings_background"
            android:orientation="horizontal"
            android:paddingTop="7dp">
            <!--this is a setting row, it contains a text, expanding list of colors, and a radio button -->

            <Spinner
                android:id="@+id/family_tree_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toStartOf="@+id/family_tree_button"
                android:layout_toLeftOf="@+id/family_tree_button"
                android:paddingTop="7dp"
                android:prompt="@string/back">

            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/family_tree_lines_color" />

            <ToggleButton
                android:id="@+id/family_tree_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/settings_background"
            android:orientation="horizontal"
            android:paddingTop="7dp">
            <!--this is a setting row, it contains a text, expanding list of colors, and a radio button -->

            <Spinner
                android:id="@+id/spouse_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toStartOf="@+id/spouse_button"
                android:layout_toLeftOf="@+id/spouse_button"
                android:paddingTop="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/spouse_lines" />

            <ToggleButton
                android:id="@+id/spouse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/settings_background"
            android:orientation="horizontal"
            android:paddingTop="7dp">
            <!--this is a setting row, it contains a text, expanding list of colors, and a radio button -->

            <Spinner
                android:id="@+id/map_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:paddingTop="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/map_type" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/settings_background"
            android:orientation="horizontal"
            android:paddingTop="7dp">
            <!--this is a setting row, it contains a text, expanding list of colors, and a radio button -->
            <Button
                android:id="@+id/resync_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="7dp"
                android:text="@string/resync" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/resync_data_from_familymap_server" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/settings_background"
            android:orientation="horizontal"
            android:paddingTop="7dp">
            <!--this is a setting row, it contains a text, expanding list of colors, and a radio button -->
            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:text="@string/logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/logout_and_return_to_the_login_screen" />

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>